# module-config

./: .gitignore  LICENSE  README.md  build.gradle.kts  kt  settings.gradle.kts
rs/common/: Cargo.toml
rs/common/src/: fs_data.rs  fs_util.rs  fwk.rs  lib.rs  macros.rs  tokio_run.rs  web.rs
rs/common/src/config/: app_cfg_info.rs
rs/common/src/fs_data/: bar_a_data.rs  bar_aw_data.rs  bar_data.rs  foo_a_data.rs  foo_aw_data.rs  foo_data.rs
rs/common/src/fwk/: app_err.rs  async_borrow_fn.rs  async_borrow_fn1.rs  async_borrow_fn_pv.rs  cfg.rs  cfg_deps.rs  cfg_deps_boot.rs  cfg_deps_ext.rs  cfg_deps_ext_nc.rs  cfg_deps_nc.rs  cfg_deps_s.rs  cfg_ext.rs  cfg_ovd_def.rs  contextualizer.rs  dep.rs  from_ref_make.rs  get_cfg.rs  partial_application.rs  partial_apply.rs  ref_into_make.rs  tx.rs  utils.rs  with_transaction.rs
rs/common/src/test_support/: test_utils.rs
rs/common/src/tokio_run/: tokio_run_common.rs
rs/common/src/web/: actix_handler.rs  axum_handler.rs  handler.rs
rs/pushcfgtovar/: Cargo.toml
rs/pushcfgtovar/src/: fs.rs
rs/pushcfgtovar/src/fs/: bar_bf.rs  foo_sfl.rs
rs/pushcfgtovar/src/fwk/: cfg_src.rs
rs/pushcfgtovar/src/startup/: init_no_cache.rs  init_with_cache.rs
rs/pushdepstovar/: Cargo.toml
rs/pushdepstovar/src/: fs.rs  fwk.rs  lib.rs  startup.rs  tokio_run_common.rs
rs/pushdepstovar/src/fs/: bar_a_bf.rs  bar_ai_bf.rs  bar_bf.rs  bar_i_bf.rs  boot.rs  foo_a_sfl.rs  foo_ac_sfl.rs  foo_ai_sfl.rs  foo_i_sfl.rs  foo_sfl.rs
rs/pushdepstovar/tests/: common.rs  common_test.rs  common_test_ai.rs  test1.rs  test2.rs  test_1_2.rs
(+549 files in other folders)
