[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17"
arc-swap = "1.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
actix-web = "4"
serde = {version="1.0", features=["derive"]}
serde_json = "1"
axum = "0.6"
derive_more = "0.99"

