[package]
name = "pushcfgtovar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
once_cell = "1.17.0"
arc-swap = "1.6.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.26"
